--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,9 @@ jobs:
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add .
-          git commit -m "Update strategy map" || exit 0
+          git commit -m "Update map data" || echo "No changes to commit"
           git push
+
 
 
 
