--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Strategy Map Deploy
 
 on:
   schedule:
-    - cron: '0 * * * *' 
+    - cron: '12 */7 * * *'
   workflow_dispatch: # 사령관님의 수동 딸깍 버튼!
 
 permissions:
@@ -33,6 +33,7 @@ jobs:
           git add .
           git commit -m "Update map data" || echo "No changes to commit"
           git push
+
 
 
 
