--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Strategy Map Deploy
 
 on:
-  schedule:
-    - cron: '12 */7 * * *'
+  # schedule:
+  #   - cron: '12 */7 * * *'
   workflow_dispatch: # 사령관님의 수동 딸깍 버튼!
 
 permissions:
@@ -33,6 +33,7 @@ jobs:
           git add .
           git commit -m "Update map data" || echo "No changes to commit"
           git push
+
 
 
 
